# tcc

./: .gitignore  .vimrc  CMakeLists.txt  LICENSE  README.md  build.sh  debug.sh  env.sh  run.sh  x.sh
3rd/log/: log.c
demo/: tcc.c  test.c
flex_bison/: c99.l  c99.y  makefile
include/back/instrSchedu/: instrSchedu.c
include/front/lexer/: keywords.h  lexer.h  number.h  token.h
include/misc/: list.h
src/front/lexer/: lexer.c  number.c  token.c
src/front/parser/: parser.c
src/misc/: list.c  util.c
